# blueprints-server

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
src/blueprints_server/: alembic.ini  app.py
src/blueprints_server/alembic/: env.py
src/blueprints_server/alembic/versions/: 2023_03_24_1013-5c8a505259ae_add_entity.py
src/blueprints_server/db/: models.py
tests/: test_blueprints.py
